# cavs-oss

./: .asset-template.json.hb  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deep-research-report.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
core/: README.md
core/cavs-chunker/: Cargo.toml  README.md
core/cavs-chunker/src/: lib.rs
core/cavs-cli/: Cargo.toml  README.md
core/cavs-cli/src/: analyze_packs.rs  apply_cmd.rs  bench_butler.rs  bench_butler_full.rs  bench_compression.rs  bench_delta.rs  bench_pairwise.rs  bench_pipeline.rs  bench_routes.rs  bench_steampipe_cases.rs  bench_versions.rs  bench_wharf.rs  blob_detect.rs  build_cmd.rs  classify.rs  compare.rs  corrupt.rs  diff_plan.rs  doctor.rs  ffmpeg.rs  ignore.rs  inspect_cmd.rs  io_estimate.rs  main.rs  manifest_cmd.rs  optimize_layout.rs  optimize_patch.rs  pack.rs  pack_dir.rs  patch_policy.rs  patch_v2.rs  plan_update.rs  preview.rs  profile.rs  publish_dir.rs  publish_preview.rs  report.rs  route_plan.rs  serve_cmd.rs  signature_cmd.rs  (+9 more)
core/cavs-cli/src/certify/: godot.rs  integrity.rs  mod.rs  regressions.rs  repro.rs  routes.rs  workspace.rs
core/cavs-cli/src/patch_policy_bench/: engines.rs  mod.rs  model.rs  report.rs  simulate.rs  traffic.rs
core/cavs-cli/tests/: certify_e2e.rs  e2e.rs  steampipe_e2e.rs
core/cavs-client/: Cargo.toml  README.md
core/cavs-client/src/: cache.rs  hybrid.rs  journal.rs  main.rs  retry.rs  serverless.rs
core/cavs-client/tests/: hardening.rs  hybrid.rs  manifest_formats.rs  packfile_store.rs  streaming.rs
core/cavs-ffi/: Cargo.toml
core/cavs-ffi/include/: cavs_sdk.h
core/cavs-ffi/src/: lib.rs
core/cavs-ffi/tests/: abi.rs
core/cavs-format/: Cargo.toml  README.md
core/cavs-format/src/: ingest.rs  lib.rs  reader.rs  writer.rs
core/cavs-format/tests/: bg4.rs  fuzz_replay.rs  parallel_ingest.rs  roundtrip.rs  signing.rs
core/cavs-hash/: Cargo.toml  README.md
core/cavs-hash/src/: lib.rs
core/cavs-lfs-agent/: Cargo.toml  README.md
core/cavs-lfs-agent/bench/: RESULTS.md  gen.py  http-bench.sh  range_server.py  run.sh
core/cavs-lfs-agent/bench/results/: big-binary-store-stat.txt  compressible-store-stat.txt  full-rewrite-store-stat.txt  many-files-store-stat.txt  results.csv
core/cavs-lfs-agent/bench/results/benchmark-v1/: big-binary-cavs-store-stat.txt  compressible-cavs-store-stat.txt  full-rewrite-cavs-store-stat.txt  many-files-cavs-store-stat.txt  results.csv
core/cavs-lfs-agent/bench/results/perf-round2-v1/: README.md  http-cold-clone.csv  results-ab-r1.csv  results-ab-r2.csv
core/cavs-lfs-agent/bench/results/perf-round2.1-v1/: README.md  http-bench.csv
core/cavs-lfs-agent/bench/results/perf-round3-v1/: README.md  http-bench-local.csv  http-bench-wan25.csv
core/cavs-lfs-agent/bench/results/profile-sweep/: big-binary-cavs-fastcdc-16k-store-stat.txt  big-binary-cavs-fastcdc-256k-store-stat.txt  big-binary-cavs-fastcdc-64k-store-stat.txt  big-binary-cavs-fixed-1m-store-stat.txt  compressible-cavs-fastcdc-16k-store-stat.txt  compressible-cavs-fastcdc-256k-store-stat.txt  compressible-cavs-fastcdc-64k-store-stat.txt  compressible-cavs-fixed-1m-store-stat.txt  many-files-cavs-fastcdc-16k-store-stat.txt  many-files-cavs-fastcdc-256k-store-stat.txt  many-files-cavs-fastcdc-64k-store-stat.txt  many-files-cavs-fixed-1m-store-stat.txt  results.csv
core/cavs-lfs-agent/bench/results/xet-improvements-v1/: README.md  results-branch.csv  results-main.csv  tensor-branch-store-stat.txt  tensor-main-store-stat.txt
core/cavs-lfs-agent/e2e/: run.sh
core/cavs-lfs-agent/src/: download.rs  http_push.rs  main.rs  protocol.rs  remote.rs  store_sync.rs  upload.rs
core/cavs-lfs-agent/tests/: agent_roundtrip.rs
core/cavs-manifest/: Cargo.toml  README.md
core/cavs-manifest/src/: lib.rs  v2.rs  varint.rs
core/cavs-manifest/tests/: roundtrip.rs
core/cavs-plan/: Cargo.toml
core/cavs-plan/src/: apply.rs  lib.rs
core/cavs-proto/: Cargo.toml  README.md
core/cavs-proto/src/: errors.rs  lib.rs
core/cavs-proto/tests/: fuzz_replay.rs
core/cavs-rebuild-plan/: Cargo.toml
core/cavs-rebuild-plan/src/: lib.rs
core/cavs-sdk-core/: Cargo.toml
core/cavs-sdk-core/src/: compare.rs  error.rs  fsutil.rs  lib.rs  progress.rs
core/cavs-sdk-core/src/ops/: analyze.rs  apply.rs  benchmark.rs  mod.rs  pack.rs  plan.rs  preview.rs  savings.rs  verify.rs
core/cavs-sdk-core/tests/: roundtrip.rs
core/cavs-server/: Cargo.toml  README.md
core/cavs-server/src/: main.rs  state.rs
core/cavs-server/static/: index.html  player.js
core/cavs-signature/: Cargo.toml
core/cavs-signature/src/: diff.rs  lib.rs  weak.rs
core/cavs-store/: Cargo.toml  README.md
core/cavs-store/src/: global.rs  lib.rs  packfile.rs  segindex.rs
core/cavs-store/tests/: fuzz_replay.rs
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  run.sh  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: appstate.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  server.rs  storage.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  BUTLER_COMPARISON.md  CAVSPLAN_FORMAT.md  CERTIFICATION.md  CI.md  COMPATIBILITY.md  DELIVERY_PLANNER.md  DELTA_COMPARISON.md  DIRECTORY_MODE.md  FILE_FORMATS.md  FORMAT.md  GIT_LFS.md  GODOT_PCK_ANALYZER.md  GODOT_PLUGIN.md  HYBRID_RECONSTRUCTION.md  OFFLINE_TOOLKIT.md  PAIRWISE_SIDECARS.md  PAPER.md  PATCH_GRAPH_POLICIES.md  PATCH_POLICY_BENCHMARK.md  PRACTICAL_PAIRWISE_DIFFS.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  RELEASING.md  REPRODUCIBILITY.md  ROUND3_FORMATS.md  ROUTE_BENCHMARKS.md  ROUTE_PLANNER.md  SDKS.md  (+11 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_batch_decode.rs  fuzz_container_decode.rs  fuzz_manifest_decode.rs  fuzz_pack_index_decode.rs  fuzz_signature_decode.rs  fuzz_varint_decode.rs
steam-analyzer/: Cargo.toml  README.md
steam-analyzer/src/: analyze.rs  main.rs  report.rs
steam-analyzer/tests/: analyzer.rs
(+256 files in other folders)
