[workspace]
resolver = "2"
members = [
    "core/cavs-hash",
    "core/cavs-chunker",
    "core/cavs-store",
    "core/cavs-format",
    "core/cavs-manifest",
    "core/cavs-proto",
    "core/cavs-signature",
    "core/cavs-rebuild-plan",
    "core/cavs-plan",
    "core/cavs-analyzer",
    "core/cavs-workspace",
    "core/cavs-cli",
    "core/cavs-server",
    "core/cavs-client",
]
# The libFuzzer harness needs nightly and its own profile; it builds from
# fuzz/ with `cargo +nightly fuzz run <target>`.
exclude = ["fuzz"]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Orelvis Lago Vasallo <orelvis15@gmail.com>"]
repository = "https://github.com/orelvis15/cavs-oss"
homepage = "https://github.com/orelvis15/cavs-oss"

[workspace.dependencies]
cavs-hash = { path = "core/cavs-hash", version = "1.1.0" }
cavs-chunker = { path = "core/cavs-chunker", version = "1.1.0" }
cavs-format = { path = "core/cavs-format", version = "1.1.0" }
cavs-manifest = { path = "core/cavs-manifest", version = "1.1.0" }
cavs-store = { path = "core/cavs-store", version = "1.1.0" }
cavs-proto = { path = "core/cavs-proto", version = "1.1.0" }
cavs-signature = { path = "core/cavs-signature", version = "1.1.0" }
cavs-rebuild-plan = { path = "core/cavs-rebuild-plan", version = "1.1.0" }
cavs-plan = { path = "core/cavs-plan", version = "1.1.0" }
cavs-analyzer = { path = "core/cavs-analyzer", version = "1.1.0" }
cavs-workspace = { path = "core/cavs-workspace", version = "1.1.0" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
ruzstd = "0.8"
sha2 = "0.10"
memmap2 = "0.9"
tokio-util = { version = "0.7", features = ["io"] }

blake3 = "1.5"
chacha20poly1305 = "0.10"
fastcdc = "3.1"
zstd = "0.13"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }
tempfile = "3.10"
toml = "0.8"
tar = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
