[package]
name = "cavs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cavs-manifest = { path = "../core/cavs-manifest" }
cavs-store = { path = "../core/cavs-store" }
cavs-format = { path = "../core/cavs-format" }
cavs-proto = { path = "../core/cavs-proto" }
cavs-signature = { path = "../core/cavs-signature" }
tempfile = "3"

# Not a member of the main workspace: libFuzzer needs nightly + sanitizer.
[workspace]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_manifest_decode"
path = "fuzz_targets/fuzz_manifest_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_varint_decode"
path = "fuzz_targets/fuzz_varint_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pack_index_decode"
path = "fuzz_targets/fuzz_pack_index_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_container_decode"
path = "fuzz_targets/fuzz_container_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_batch_decode"
path = "fuzz_targets/fuzz_batch_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_signature_decode"
path = "fuzz_targets/fuzz_signature_decode.rs"
test = false
doc = false
bench = false
