[package]
name = "cavs-steam"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "cavs-steam"
path = "src/main.rs"

[dependencies]
cavs-hash = { workspace = true }
cavs-chunker = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
