[package]
name = "cavs-steam"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Estimate a game build's SteamPipe update size and detect pack files causing update bloat."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["steam", "steampipe", "gamedev", "dedup", "cavs"]
categories = ["command-line-utilities", "game-development"]

[[bin]]
name = "cavs-steam"
path = "src/main.rs"

[dependencies]
cavs-hash = { workspace = true }
cavs-chunker = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
