[package]
name = "cavs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Package, verify and deliver deduplicated game content as .cavs files."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cavs", "gamedev", "dedup", "packaging", "cli"]
categories = ["command-line-utilities", "game-development", "compression"]

[[bin]]
name = "cavs"
path = "src/main.rs"

[dependencies]
cavs-hash = { workspace = true }
cavs-chunker = { workspace = true }
cavs-format = { workspace = true }
cavs-store = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
