[package]
name = "cavs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Package, verify and deliver deduplicated game content as .cavs files."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cavs", "gamedev", "dedup", "packaging", "cli"]
categories = ["command-line-utilities", "game-development", "compression"]

[[bin]]
name = "cavs"
path = "src/main.rs"

[dependencies]
cavs-hash = { workspace = true }
cavs-chunker = { workspace = true }
cavs-format = { workspace = true }
cavs-manifest = { workspace = true }
cavs-proto = { workspace = true }
cavs-store = { workspace = true }
cavs-signature = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
zstd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
brotli = { version = "7", optional = true }

[features]
# Brotli is benchmark-only (Wharf parity check); zstd stays the default.
brotli-bench = ["dep:brotli"]

[dev-dependencies]
tempfile = { workspace = true }
