[package]
name = "cavs-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cavs-client"
path = "src/main.rs"

[dependencies]
cavs-hash = { workspace = true }
cavs-proto = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
tempfile = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
