[package]
name = "cavs-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native streaming client with a persistent cache for CAVS content delivery."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cavs", "client", "dedup", "cache", "cdn"]
categories = ["command-line-utilities"]

[[bin]]
name = "cavs-client"
path = "src/main.rs"

[dependencies]
cavs-hash = { workspace = true }
cavs-manifest = { workspace = true }
cavs-proto = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
tempfile = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
