[package]
name = "cavs-format"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The .cavs binary container format: streaming writer, hardened reader, Ed25519 signing."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cavs", "format", "dedup", "packaging", "encoding"]
categories = ["encoding", "compression"]

[dependencies]
cavs-hash = { workspace = true }
cavs-store = { workspace = true }
zstd = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
