[package]
name = "cavs-rebuild-plan"
description = "Hybrid reconstruction planning for CAVS: unify cache, network and previous-artifact sources into one verified plan"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
