[package]
name = "cavs-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/HTTPS origin server for CAVS content delivery."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["cavs", "server", "cdn", "dedup", "streaming"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "cavs-server"
path = "src/main.rs"

[dependencies]
cavs-hash = { workspace = true }
cavs-format = { workspace = true }
cavs-proto = { workspace = true }
cavs-store = { workspace = true }
zstd = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
