[package]
name = "cavs-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cavs-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
