[package]
name = "cavs-desktop"
version = "1.1.0"
description = "CAVS Desktop — local build/update lab for game developers"
authors = ["Orelvis Lago Vasallo <orelvis15@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/orelvis15/cavs-oss"
edition = "2021"
rust-version = "1.77"

# Detach from the root workspace: this crate has a Tauri-specific profile and
# its own lockfile.
[workspace]

[lib]
name = "cavs_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }

# Local development test server (Local Server screen).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

# CAVS engine — same Rust core used by the CLI and SDKs.
cavs-sdk-core = { path = "../../core/cavs-sdk-core" }

[features]
# This feature is used for production builds where `devUrl` is unset.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
